# conduit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
mobile/: App.tsx  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
mobile-app/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile-app/src/: navigation.ts
mobile/src/: App.tsx  bridge.ts  keys.test.ts  keys.ts  main.tsx  styles.css
sidecars/matrix-adapter/: README.md  SETUP.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx  agents.ts  fuzzy.test.ts  fuzzy.ts  layout.test.ts  layout.ts  main.tsx  markdown.test.ts  markdown.ts  paths.ts  store.ts  theme.css  themes.ts  trim.test.ts  trim.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agy_usage.rs  board.rs  bridge.rs  broker.rs  claude_status.rs  claude_usage.rs  clipboard.rs  continuity.rs  continuity_read.rs  fleet.rs  fleet_mcp.rs  format.rs  fsops.rs  git.rs  git_mut.rs  hookbus.rs  hooks.rs  hotexit.rs  lib.rs  local_llm.rs  main.rs  menu.rs  notify.rs  plugins.rs  pty.rs  search.rs  store.rs  telemetry.rs  transcript.rs  updates.rs  usage_tally.rs  worktree.rs
src-tauri/src/tasks/: frac.rs  mod.rs  stage_machine.rs
src-tauri/src/tasks/knowledge/: index.md  log.md
src-tauri/src/tasks/personas/: delivery-planner.md  implementer.md  orchestrator.md  solution-architect.md  ux-designer.md
src/components/: AboutPanel.tsx  AccountList.tsx  AgentGlyph.tsx  AgentList.tsx  AgyUsagePanel.tsx  BoardCard.tsx  BoardCardDetail.tsx  BoardColumn.tsx  BoardView.tsx  ClaudePopover.tsx  ClaudeStatusPill.tsx  ClaudeStatusWarning.tsx  ClaudeUsagePanel.tsx  CodeEditorPane.tsx  ErrorBoundary.tsx  FileTree.tsx  FileViewer.tsx  FormatPrefsPanel.tsx  GateAction.tsx  GeneralSettings.tsx  GitGraph.tsx  Icons.tsx  ImagePreview.tsx  LanguageSelector.tsx  MarkdownPreview.tsx  McpMatrix.tsx  NewSessionDialog.tsx  Onboarding.tsx  OpenCodePanel.tsx  PluginConsentDialog.tsx  PluginsPanel.tsx  QuickOpen.tsx  RightColumn.tsx  SearchPalette.tsx  (+12 more)
(+126 files in other folders)
