[package]
name = "conduit-tauri"
version = "0.8.0"
description = "Conduit — multiple real Claude Code terminals across projects, in one window."
authors = ["uziiuzair"]
license = "MIT"
repository = "https://github.com/uziiuzair/conduit"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "conduit_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal + PTY
portable-pty = "0.8"
base64 = "0.22"

# Hook server
tiny_http = "0.12"

# Mobile bridge (loopback WebSocket)
tungstenite = "0.23"

# State + utils
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
